--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,3 +1,13 @@
+# If you only one circle to run on direct commits to master, you can uncomment this out
+# and uncomment the filters: *filter-only-master down below too
+#
+# aliases:
+#  - &filter-only-master
+#    branches:
+#      only:
+#        - master
+
+
 version: 2
 jobs:
   deploy-website:
@@ -20,3 +30,4 @@ workflows:
   build_and_deploy:
     jobs:
       - deploy-website:
+#         filters: *filter-only-master
