--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -22,7 +22,7 @@ jobs:
             git config --global user.email "nadeemkhedr@users.noreply.github.com"
             git config --global user.name "Nadeem Khedr"
             echo "machine github.com login nadeemkhedr password $GITHUB_TOKEN" > ~/.netrc
-            cd website && yarn install && GIT_USER=<GIT_USER> yarn run publish-gh-pages
+            cd website && npm install && GIT_USER=<GIT_USER> npm run publish-gh-pages
 
 workflows:
   version: 2
