--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,11 +1,8 @@
-# If you only one circle to run on direct commits to master, you can uncomment this out
-# and uncomment the filters: *filter-only-master down below too
-#
-# aliases:
-#  - &filter-only-master
-#    branches:
-#      only:
-#        - master
+aliases:
+ - &filter-only-master
+   branches:
+     only:
+       - master
 
 version: 2
 jobs:
@@ -28,5 +25,5 @@ workflows:
   version: 2
   build_and_deploy:
     jobs:
-      - deploy-website
-#         filters: *filter-only-master
+      - deploy-website:
+         filters: *filter-only-master
