feat(general): Add scss to the project, update the footer

--- a/website/package.json
+++ b/website/package.json
@@ -1,19 +1,26 @@
 {
   "scripts": {
     "examples": "docusaurus-examples",
-    "start": "nodemon --exec npm run dev",
+    "start": "npm-run-all -p watch-css dev:watch",
+    "dev:watch": "nodemon --exec npm run dev",
     "dev": "docusaurus-start",
-    "build": "docusaurus-build",
+    "build": "npm run build-css && docusaurus-build",
     "publish-gh-pages": "docusaurus-publish",
     "write-translations": "docusaurus-write-translations",
     "version": "docusaurus-version",
-    "rename-version": "docusaurus-rename-version"
+    "rename-version": "docusaurus-rename-version",
+    "build-css": "node-sass-chokidar  style/ -o static/css/",
+    "watch-css": "npm run build-css && node-sass-chokidar style/ -o static/css/ --watch --recursive"
   },
   "devDependencies": {
     "docusaurus": "^1.0.9",
-    "nodemon": "^1.17.2"
+    "node-sass-chokidar": "^1.2.2",
+    "nodemon": "^1.17.2",
+    "npm-run-all": "^4.1.2"
   },
   "nodemonConfig": {
-    "ignore": ["i18n/*"]
+    "ignore": [
+      "i18n/*"
+    ]
   }
 }
