--- a/website/package.json
+++ b/website/package.json
@@ -13,7 +13,7 @@
     "watch-css": "npm run build-css && node-sass-chokidar style/ -o static/css/ --watch --recursive"
   },
   "devDependencies": {
-    "docusaurus": "^1.7.2",
+    "docusaurus": "^1.14.0",
     "node-sass-chokidar": "^1.2.2",
     "nodemon": "^1.17.2",
     "npm-run-all": "^4.1.2"
@@ -23,5 +23,7 @@
       "i18n/*"
     ]
   },
-  "dependencies": {}
+  "dependencies": {
+    "underscore.string": ">=3.3.5"
+  }
 }
